# winaccpro_fortran

./: CMakeLists.txt  README.md
src/: 2dinter.f90  grid.f90  init.f90  kurs.f90  mainmodule.f90  modmod.f90  mpmod.f90  mymod.f90  poly.f90  read_write.f90  splain.f90
